# Mycelium-Project

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml
Enoki/: .gitignore  .prettierignore  README.md  package-lock.json  package.json  tailwind.config.js
Enoki/app/: globals.css  layout.tsx  page.tsx
Enoki/app/components/: buttons.tsx  coprocessors.tsx  graphs.tsx  network_table.tsx  network_tables.tsx
Enoki/app/coprocessor/: page.tsx
Enoki/app/coprocessor/[name]/: page.tsx
Enoki/app/pages/: network_tables.tsx
Enoki/glue/: Datalog.ts  EnokiTypes.ts  NetworkTable.ts  Terminal.ts  Tracing.ts
Enoki/src-tauri/: Cargo.toml  tauri.conf.json  test.py  update_repos.ps1  update_repos.sh
Enoki/src-tauri/icons/: icon.icns
Enoki/src-tauri/scripting_base/: enoki.py  enoki_core.pyi
Enoki/src-tauri/src/: datalog_handler.rs  enoki_types.rs  error.rs  logging.rs  main.rs  mushroom_types.rs  network_table_handler.rs  test.rs
Enoki/src-tauri/src/datalog/: commands.rs  handler.rs  mod.rs  tauri_cmds.rs
Enoki/src-tauri/src/frontend_helpers/: app_vars.rs  logging.rs  mod.rs  windows.rs
Enoki/src-tauri/src/networktable/: commands.rs  handler.rs  mod.rs  python_funcs.rs  tauri_cmds.rs
Enoki/src-tauri/src/networktable/ffi/: mod.rs  python.rs  tauri.rs
Enoki/src-tauri/src/python_helpers/: logging.rs  mod.rs  py_enoki_types.rs
Enoki/src-tauri/src/robot_interface/: mod.rs  pinging.rs  rio_sys_api_diagnostics.rs  team_number.rs
Enoki/src-tauri/src/terminal/: commands.rs  handler.rs  mod.rs
Enoki/utilities/: NT4Handler.ts  NetworkTableV4.ts  Tracing.ts
Morel/example_projects/wpilib_build_file/: build.gradle
Morel/junction/core/src/org/littletonrobotics/junction/: LoggedRobot.java
Morel/junction/shims/wpilib/src/edu/wpi/first/wpilibj/livewindow/: LiveWindow.java
Shiitake/: Makefile  Shiitake.h  Shiitake.java  build.gradle  settings.gradle
Shiitake/gradle/wrapper/: gradle-wrapper.properties
Shiitake/native/: Cargo.toml
Shiitake/native/src/: lib.rs
Shiitake/shiitake-lib-rs/: Cargo.toml
Shiitake/shiitake-lib-rs/src/: lib.rs  server.rs
Shiitake/shiitake_lib/: .gitignore  Cargo.toml
Shiitake/shiitake_lib/src/: lib.rs
Shiitake/src/main/java/: Shiitake.java
docs/: developing.md
tauri-test/: package.json
tauri-test/app/: greet.tsx  page.tsx  page2.tsx
tauri-test/src-tauri/: tauri.conf.json
tauri-test/src-tauri/src/: main.rs  network_table_handler.rs  networktables.rs
tauri-test/utilities/: NT4Handler.ts  NT4Handler.tsx
