[package]
name = "enoki"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "enoki"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "^1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.28.2", features = ["rt", "sync", "net", "time", "macros", "rt-multi-thread", "parking_lot", "tracing" ] }
tracing-subscriber = "0.3.17"
tracing = "0.1.27"
rmpv = "1.0.1"
single_value_channel = "1.2.2"
chrono = "0.4.30"
thiserror = "1.0.44"
tracing-appender = "0.2.2"
once_cell = "1.18.0"
nu-ansi-term = "0.49"
parking_lot = "0.12.1"
surge-ping = { git = "https://github.com/kolapapa/surge-ping", branch = "main" }
frc-value = "0.1.3"
rand = "0.8.5"
reqwest = "0.11.20"
xmlparser = "0.13.5"
num_enum = "0.7.0"

pyo3 = "0.19.0"

network-tables = { git = "https://github.com/oh-yes-0-fps/network-tables-rs", version = "^0.1", features = [ "client-v4", "tracing" ] }
wpilog = { git = "https://github.com/oh-yes-0-fps/wpilog-rs", version = "^0.1", features = [ "tracing" ] }

# tauri
tauri = { version = "1.4.1", features = ["api-all"] }
tauri-plugin-positioner = "1.0"
tauri-plugin-fs-extra = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }



[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.release]
pre-release-hook = ["./update_subrepos.sh"]

