[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
single_value_channel = "1.2.2"
sysinfo = "0.29.2"


[lib]
crate_type = ["cdylib"]

[features]
default = ["jni"]
jni = []